--- a/E2ETests/E2ETests.csproj
+++ b/E2ETests/E2ETests.csproj
@@ -87,14 +87,13 @@
   <ItemGroup>
     <Compile Include="Pages\AddTagDialog.cs" />
     <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\MainPage.cs" />
     <Compile Include="Pages\NbaPage.cs" />
-    <Compile Include="Pages\MyFeedPage.cs" />
-    <Compile Include="Pages\SignInPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Suites\AddTagSuite.cs" />
+    <Compile Include="Suites\NbaSuite.cs" />
     <Compile Include="Suites\BaseSuite.cs" />
     <Compile Include="Tests\AddTagTest.cs" />
-    <Compile Include="Tests\MyFeedTest.cs" />
+    <Compile Include="Tests\ToolBarNavigationTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
